<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/userDetailsTV"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="email"
        android:textColor="#353535"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/passwordTitleTV"

        />

    <TextView
        android:id="@+id/passwordTitleTV"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/user_password"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/userDetailsTV"
        />
    <Button
        android:id="@+id/changePassBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordTitleTV"
        android:text="@string/change_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/logoutTV"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/logout_user"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/changePassBtn"
        />
    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logoutTV"
        android:text="@string/logout_button"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <TextView
        android:id="@+id/languageTV"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/language"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/logoutBtn"
        />
    <Button
        android:id="@+id/languageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/languageTV"
        android:text="@string/en_gr"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/themeTV"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/theme"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/languageBtn"
        />

    <Button
        android:id="@+id/changeThemeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/themeTV"
        android:text="@string/light_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>